# azakharov

./: .bash_aliases  .conkyrc.net  .conkyrc.stats  .conkyrc.sys  .conkyrc.we  CustomizeBashPrompt.md  Makefile  ProjectHome.md  do_home_backup  resume.html  resume.html.xsl  resume.tex.xsl  resume.txt.xsl  resume.xml
.config/cs1.6/: u.cfg
branches/home/: .bash_prompt  .conkyrc.air  .conkyrc.daily  .conkyrc.hot  .conkyrc.net  .conkyrc.rings  .conkyrc.stats  .conkyrc.sys  .conkyrc.we
branches/home/.config/cs1.6/: u.cfg
branches/home/scripts/: acore  aver.awk  bench_times  screenshot  set.random.wallpaper.sh
branches/home/scripts/conky/: colorize  conky-rss.sh  conky.lua  network.lua  rings.lua  top.lua
branches/home/scripts/openbox/: ob4vaulter.ru_RU.UTF-8.txt  ob4vaulter.sh
branches/home/scripts/openttd/: Makefile.patches  Mk.params  Mk.patchtable  patches.cat.en.txt  patches.cat.ru.txt  patches.en.txt  patches.ru.txt  patchpack.network.txt  patchpack.txt
branches/home/scripts/openttd/bundles/: openttd.cfg
branches/home/scripts/sudoku/: cypher.js  stdlib.js  sudoku.css  sudoku.en.js  sudoku.html  sudoku.js  sudoku.ru.js  sudoku.solver.js  sudoku.test.js
branches/home/src/tt3d/: init.cmake  removed.cmake
branches/home/www/: orphus.js_.txt
branches/home/www/vaultsoft_ru/: activeNav.js  geishi.css  html-elements.css  layout.css  page.tpl.php  template.php  theme.css  user-login-block.tpl.php  vaultsoft_ru-fresh.css  vaultsoft_ru.css  vaultsoft_ru.info
branches/home/www/vaultsoft_ru/c/: hh.css  (+6 more)
scripts/: aver.awk  bench_times  sensors  set.random.wallpaper.sh
scripts/conky/: clock.lua  conky-rss.sh  conkyrc.top  network.lua  print_r.lua  rings.lua  test_case.2  top.lua
scripts/openbox/: ob-hw.sh  ob4vaulter.en_EN.UTF-8.txt  ob4vaulter.sh
scripts/openttd/: Makefile.patches  Mk.params  Mk.params.example  Mk.patchtable  patches.en.txt  patches.ru.txt  patchpack.network.txt  patchpack.txt
scripts/openttd/bundles/: openttd.cfg
scripts/openttd/bundles/data/: basecosts.grf
scripts/openttd/bundles/scripts/: on_newmonth.scr
scripts/sudoku/: assert.js  cypher.js  sudoku.css  sudoku.en.js  sudoku.html  sudoku.js  sudoku.ru.js  sudoku.solver.js  sudoku.test.js
src/tt3d/: CMakeLists.txt  test.lua
src/tt3d/src/core/: TwoDimensionalCoordinate.hpp
src/tt3d/src/server/: main.cpp
trunk/: Makefile  resume.html  resume.html.xsl  resume.tex.xsl  resume.xml
wiki/: CustomizeBashPrompt.wiki
www/vaultsoft_ru/: activeNav.js  block-locale.tpl.php  custom-pager-top.tpl.php  custom-pager.tpl.php  extendView.js  geishi.css  layout.css  node-image-portfolio.tpl.php  node-image.tpl.php  page.tpl.php  theme-settings.php  theme.css  vaultsoft_ru-fresh.css  vaultsoft_ru.info
www/vaultsoft_ru/c/: agg.css  geshi.css  html-elements.css  layout.css  portfolio.css  theme.css  tr.css  vaultsoft_ru-fresh.css
www/vaultsoft_ru/j/: extendView.min.js  jquery.css-transitions.js
(+12 files in other folders)
